examples/test/testpolicy13532.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13532
  namespace: namespace238
spec:
  podSelector:
    matchLabels:
      key14: value25
      key4: value8
      key49: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value19
          key40: value42
      podSelector:
        matchLabels:
          key37: value21
          key21: value21
          key15: value21
